Boolean_set_operations_2/demo/Boolean_set_operations_2/errors/Curve_const_iterator_not_found_17_7
The following error was generated on 8:00 IST 17/7/18

In file included from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:24:0,
                 from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24,
                 from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Linear_polygons.h:26,
                 from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:77:
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h: In instantiation of ‘class CGAL::Qt::Piecewise_boundary_graphics_item<CGAL::General_polygon_with_holes_2<CGAL::General_polygon_2<CGAL::Arr_segment_traits_2<CGAL::Epeck> > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’:
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:32:7:   required from ‘class CGAL::Qt::Piecewise_region_graphics_item<CGAL::General_polygon_with_holes_2<CGAL::General_polygon_2<CGAL::Arr_segment_traits_2<CGAL::Epeck> > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:54:7:   required from ‘class CGAL::Qt::Piecewise_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2_apurva<CGAL::Epeck> >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Linear_polygons.h:151:7:   required from ‘class CGAL::Qt::Linear_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2_apurva<CGAL::Epeck> > >’
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:178:15:   required from ‘Rep<GI_, Set_>::Rep() [with GI_ = CGAL::Qt::Linear_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2_apurva<CGAL::Epeck> > >; Set_ = CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2_apurva<CGAL::Epeck> >]’
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:301:24:   required from here
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h:41:62: error: no type named ‘Curve_const_iterator’ in ‘CGAL::Qt::Piecewise_boundary_graphics_item<CGAL::General_polygon_with_holes_2<CGAL::General_polygon_2<CGAL::Arr_segment_traits_2<CGAL::Epeck> > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>::Piecewise_boundary {aka class CGAL::General_polygon_with_holes_2<CGAL::General_polygon_2<CGAL::Arr_segment_traits_2<CGAL::Epeck> > >}’
   typedef typename Piecewise_boundary::Curve_const_iterator  Curve_piece_const_iterator ;
                                                              ^
CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed
make[2]: *** [CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o] Error 1
CMakeFiles/Makefile2:515: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/all' failed
make[1]: *** [CMakeFiles/Boolean_set_operations_2.dir/all] Error 2
Makefile:94: recipe for target 'all' failed
make: *** [all] Error 2

Assumed reason: Unable to convert General_polygon_with_holes to General_polygon_2 in piecewise_boundary_graphics_item
Solution typedef typename Piecewise_boundary_::General_polygon_2 Piecewise_boundary ;


